# NEWPROJECT

./: .gitignore  README.md  main.py  pyproject.toml  test_headless.py  test_ring.py
core/: __init__.py  config.py  filling_solver.py  gating.py  gating_calculator.py  gating_engine.py  materials.py  reporter.py  riser_designer.py  sdf_analyzer.py  step_loader.py  taichi_sph.py  thermal_solver.py  types.py  voxelizer.py
data/: Knuckle.STEP  knuckle_report.html  parca1_report.html
ui/: feeder_dialog.py  flow_animator.py  flow_velocity_graph.py  main_window.py  section_dialog.py  section_picker.py  viewer.py
