[project]
name = "josecast-analyzer"
version = "8.0.0"
description = "Titan geometric casting analysis engine with user casting parameters, pseudo-enthalpy heat equation, Heuver circles, feeding-cost Dijkstra, ingate flow checks and adaptive 160-2040 voxel SDF physics."
requires-python = ">=3.10"
dependencies = [
    "cadquery>=2.7.0",
    "trimesh>=4.10.0",
    "numpy>=2.0.0",
    "scipy>=1.10.0",
    "pyvista>=0.48.0",
    "pyvistaqt>=0.12.0",
    "PyQt6>=6.5.0",
    "fpdf2>=2.7.0",
    "pypdf>=4.0.0",
    "Pillow>=10.0.0",
    "numba>=0.60.0",
    "scikit-learn>=1.5.0",
    "scikit-image>=0.25.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
josecast = "main:main"
